# 4D-Risk-Predictor

./: .gitignore  4D_Risk_Predictor.spec  LICENSE  README.md  build.bat  build.sh  main.py  pyproject.toml  requirements.txt  svd128_extratrees_feature_importance.csv
prediction_toolkit/: __init__.py  batch_predict.py  data_loader.py  model.py  predict.py  vcf_parser.py  vcf_to_csv.py
prediction_toolkit/example/: example_env.csv  example_snp.csv
prediction_toolkit/gui/: __init__.py  app.py
